--- a/uni-project/uni-project.css
+++ b/uni-project/uni-project.css
@@ -1,7 +1,10 @@
 /**
- *	uni-project.css v1.6.2
- *	(c) 2014－2021 dtb315
- *	time:Thur Jan 06 2022 16:00:00 GMT+0800 (CST)
+ * Copyright (c) 2021-2022 Elong
+ * uni-project.css is licensed under Mulan PSL v2.
+ * You can use this software according to the terms and conditions of the Mulan PSL v2. 
+ * You may obtain a copy of Mulan PSL v2 at: http://license.coscl.org.cn/MulanPSL2 
+ * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.  
+ * See the Mulan PSL v2 for more details.  
  */
 
 /* ===元素基本样式=== */
