uni-project.css 字体大小最高优先级

--- a/uni-project/uni-project.css
+++ b/uni-project/uni-project.css
@@ -399,323 +399,323 @@ textarea {
 /* 字体大小 */
 
 .u-f-1rp {
-  font-size: 1rpx
+  font-size: 1rpx !important
 }
 
 .u-f-2rp {
-  font-size: 2rpx
+  font-size: 2rpx !important
 }
 
 .u-f-3rp {
-  font-size: 3rpx
+  font-size: 3rpx !important
 }
 
 .u-f-4rp {
-  font-size: 4rpx
+  font-size: 4rpx !important
 }
 
 .u-f-5rp {
-  font-size: 5rpx
+  font-size: 5rpx !important
 }
 
 .u-f-6rp {
-  font-size: 6rpx
+  font-size: 6rpx !important
 }
 
 .u-f-7rp {
-  font-size: 7rpx
+  font-size: 7rpx !important
 }
 
 .u-f-8rp {
-  font-size: 8rpx
+  font-size: 8rpx !important
 }
 
 .u-f-9rp {
-  font-size: 9rpx
+  font-size: 9rpx !important
 }
 
 .u-f-10rp {
-  font-size: 10rpx
+  font-size: 10rpx !important
 }
 
 .u-f-11rp {
-  font-size: 11rpx
+  font-size: 11rpx !important
 }
 
 .u-f-12rp {
-  font-size: 12rpx
+  font-size: 12rpx !important
 }
 
 .u-f-13rp {
-  font-size: 13rpx
+  font-size: 13rpx !important
 }
 
 .u-f-14rp {
-  font-size: 14rpx
+  font-size: 14rpx !important
 }
 
 .u-f-15rp {
-  font-size: 15rpx
+  font-size: 15rpx !important
 }
 
 .u-f-16rp {
-  font-size: 16rpx
+  font-size: 16rpx !important
 }
 
 .u-f-17rp {
-  font-size: 17rpx
+  font-size: 17rpx !important
 }
 
 .u-f-18rp {
-  font-size: 18rpx
+  font-size: 18rpx !important
 }
 
 .u-f-19rp {
-  font-size: 19rpx
+  font-size: 19rpx !important
 }
 
 .u-f-20rp {
-  font-size: 20rpx
+  font-size: 20rpx !important
 }
 
 .u-f-21rp {
-  font-size: 21rpx
+  font-size: 21rpx !important
 }
 
 .u-f-22rp {
-  font-size: 22rpx
+  font-size: 22rpx !important
 }
 
 .u-f-23rp {
-  font-size: 23rpx
+  font-size: 23rpx !important
 }
 
 .u-f-24rp {
-  font-size: 24rpx
+  font-size: 24rpx !important
 }
 
 .u-f-25rp {
-  font-size: 25rpx
+  font-size: 25rpx !important
 }
 
 .u-f-26rp {
-  font-size: 26rpx
+  font-size: 26rpx !important
 }
 
 .u-f-27rp {
-  font-size: 27rpx
+  font-size: 27rpx !important
 }
 
 .u-f-28rp {
-  font-size: 28rpx
+  font-size: 28rpx !important
 }
 
 .u-f-29rp {
-  font-size: 29rpx
+  font-size: 29rpx !important
 }
 
 .u-f-30rp {
-  font-size: 30rpx
+  font-size: 30rpx !important
 }
 
 .u-f-31rp {
-  font-size: 31rpx
+  font-size: 31rpx !important
 }
 
 .u-f-32rp {
-  font-size: 32rpx
+  font-size: 32rpx !important
 }
 
 .u-f-33rp {
-  font-size: 33rpx
+  font-size: 33rpx !important
 }
 
 .u-f-34rp {
-  font-size: 34rpx
+  font-size: 34rpx !important
 }
 
 .u-f-35rp {
-  font-size: 35rpx
+  font-size: 35rpx !important
 }
 
 .u-f-36rp {
-  font-size: 36rpx
+  font-size: 36rpx !important
 }
 
 .u-f-37rp {
-  font-size: 37rpx
+  font-size: 37rpx !important
 }
 
 .u-f-38rp {
-  font-size: 38rpx
+  font-size: 38rpx !important
 }
 
 .u-f-39rp {
-  font-size: 39rpx
+  font-size: 39rpx !important
 }
 
 .u-f-40rp {
-  font-size: 40rpx
+  font-size: 40rpx !important
 }
 
 .u-f-41rp {
-  font-size: 41rpx
+  font-size: 41rpx !important
 }
 
 .u-f-42rp {
-  font-size: 42rpx
+  font-size: 42rpx !important
 }
 
 .u-f-43rp {
-  font-size: 43rpx
+  font-size: 43rpx !important
 }
 
 .u-f-44rp {
-  font-size: 44rpx
+  font-size: 44rpx !important
 }
 
 .u-f-45rp {
-  font-size: 45rpx
+  font-size: 45rpx !important
 }
 
 .u-f-46rp {
-  font-size: 46rpx
+  font-size: 46rpx !important
 }
 
 .u-f-47rp {
-  font-size: 47rpx
+  font-size: 47rpx !important
 }
 
 .u-f-48rp {
-  font-size: 48rpx
+  font-size: 48rpx !important
 }
 
 .u-f-49rp {
-  font-size: 49rpx
+  font-size: 49rpx !important
 }
 
 .u-f-50rp {
-  font-size: 50rpx
+  font-size: 50rpx !important
 }
 
 .u-f-51rp {
-  font-size: 51rpx
+  font-size: 51rpx !important
 }
 
 .u-f-52rp {
-  font-size: 52rpx
+  font-size: 52rpx !important
 }
 
 .u-f-53rp {
-  font-size: 53rpx
+  font-size: 53rpx !important
 }
 
 .u-f-54rp {
-  font-size: 54rpx
+  font-size: 54rpx !important
 }
 
 .u-f-55rp {
-  font-size: 55rpx
+  font-size: 55rpx !important
 }
 
 .u-f-56rp {
-  font-size: 56rpx
+  font-size: 56rpx !important
 }
 
 .u-f-57rp {
-  font-size: 57rpx
+  font-size: 57rpx !important
 }
 
 .u-f-58rp {
-  font-size: 58rpx
+  font-size: 58rpx !important
 }
 
 .u-f-59rp {
-  font-size: 59rpx
+  font-size: 59rpx !important
 }
 
 .u-f-60rp {
-  font-size: 60rpx
+  font-size: 60rpx !important
 }
 
 .u-f-61rp {
-  font-size: 61rpx
+  font-size: 61rpx !important
 }
 
 .u-f-62rp {
-  font-size: 62rpx
+  font-size: 62rpx !important
 }
 
 .u-f-63rp {
-  font-size: 63rpx
+  font-size: 63rpx !important
 }
 
 .u-f-64rp {
-  font-size: 64rpx
+  font-size: 64rpx !important
 }
 
 .u-f-65rp {
-  font-size: 65rpx
+  font-size: 65rpx !important
 }
 
 .u-f-66rp {
-  font-size: 66rpx
+  font-size: 66rpx !important
 }
 
 .u-f-67rp {
-  font-size: 67rpx
+  font-size: 67rpx !important
 }
 
 .u-f-68rp {
-  font-size: 68rpx
+  font-size: 68rpx !important
 }
 
 .u-f-69rp {
-  font-size: 69rpx
+  font-size: 69rpx !important
 }
 
 .u-f-70rp {
-  font-size: 70rpx
+  font-size: 70rpx !important
 }
 
 .u-f-71rp {
-  font-size: 71rpx
+  font-size: 71rpx !important
 }
 
 .u-f-72rp {
-  font-size: 72rpx
+  font-size: 72rpx !important
 }
 
 .u-f-73rp {
-  font-size: 73rpx
+  font-size: 73rpx !important
 }
 
 .u-f-74rp {
-  font-size: 74rpx
+  font-size: 74rpx !important
 }
 
 .u-f-75rp {
-  font-size: 75rpx
+  font-size: 75rpx !important
 }
 
 .u-f-76rp {
-  font-size: 76rpx
+  font-size: 76rpx !important
 }
 
 .u-f-77rp {
-  font-size: 77rpx
+  font-size: 77rpx !important
 }
 
 .u-f-78rp {
-  font-size: 78rpx
+  font-size: 78rpx !important
 }
 
 .u-f-79rp {
-  font-size: 79rpx
+  font-size: 79rpx !important
 }
 
 .u-f-80rp {
-  font-size: 80rpx
+  font-size: 80rpx !important
 }
 
 /* 最大行数 */
